objects/SFBD__CollectionsInvoice__c.object
<CustomObject>
    <description>Junction object to link Invoices to Collection Plans</description>
    <fields>
        <fullName>SFBD__CollectionsPlan__c</fullName>
        <label>Collections Plan</label>
        <referenceTo>SFBD__CollectionsPlan__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Collections_Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFBD__InvoiceBalance__c</fullName>
        <label>Invoice Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SFBD__Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>blng__Invoice__c</referenceTo>
        <relationshipLabel>Collections Plans</relationshipLabel>
        <relationshipName>Collections_Invoices</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Collections Invoice</label>
    <nameField>
        <displayFormat>CI-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collections Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>